# cmake-subbuild-dir-bug

./: CMakeLists.txt  README.md  main.cpp
cmake/: RapidJSON.cmake
